2009-08-28  Peter Schueller  <ps@kr.tuwien.ac.at>

	* examples/weak2.hex: Changing testcase s.t. ordering of
	answer sets with same weight no longer poses a problem.
	* examples/tests/weak2.out: Likewise.

2009-08-27  Peter Schueller  <ps@kr.tuwien.ac.at>

	* include/dlvhex/HexGrammar.tcc: Adding TODO.

	* examples/percentparser.hex: Adding testcase for % parsing.
	* examples/tests/percentparser.out: Likewise.
	* examples/tests/dlvhextests.test: Likewise.
	* examples/Makefile.am: Likewise.

	* examples/tests/weak2.out: Fixing ordering of answer sets.

2009-08-24  Peter Schueller  <ps@kr.tuwien.ac.at>

	* configure.ac: Requiring boost >= 1.37, as it contains the
	important fix https://svn.boost.org/trac/boost/changeset/49234
	to the position_iterator.

	* src/dlvhex/PluginContainer.cpp: Added output for plugin
	searching and loading in verbosity level 4.
	* include/dlvhex/globals.h: Likewise.
	* src/dlvhex/globals.cpp: Likewise.

2009-08-20  Peter Schueller  <ps@kr.tuwien.ac.at>

	In boost 1.36, the previously (mistakenly) bidirectional
	boost::spirit::position_iterator was changed into a forward
	iterator. This no longer allows to use boost::regex parsers.
	The multi_pass iterator adapter does not work well together
	with the position_iterator, so we can no longer use regex_p.
	* include/dlvhex/HexGrammar.h: Replacing regex_p by direct
	spirit parser constructions, including postprocessing (trim).
	* include/dlvhex/HexGrammar.tcc: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.
	* src/dlvhex/DLVresultParserDriver.cpp: Likewise.
	* configure.ac: No longer requiring/handling boost::regex.
	* src/dlvhex/Makefile.am: Likewise.
	* src/testsuite/dlvhex/Makefile.am: Likewise.

2009-07-27  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* configure.ac: Fix AC_CONFIG_SUBDIRS bug, see also
	<https://gnunet.org/mantis/view.php?id=1340>.

	* m4/boost.m4: Applied a patch by Benoit Sigoure
	<tsuna@lrde.epita.fr> (boost.m4 maintainer) for the 'xgcc' bug.
