@@ -1,3 +1,9 @@
+2009-09-01  Peter Schueller  <ps@kr.tuwien.ac.at>
+
+	* src/dlvhex/GraphProcessor.cpp: Added/improved debug output.
+	* src/dlvhex/dlvhex.cpp: Likewise.
+	* include/dlvhex/Atom.h: Added TODOs.
+
 2009-08-28  Peter Schueller  <ps@kr.tuwien.ac.at>
 
 	* examples/weak2.hex: Changing testcase s.t. ordering of
